Reduce container size

--- a/compose.yml
+++ b/compose.yml
@@ -1,6 +1,11 @@
 services:
   castestor:
-    build: .
+    build: 
+      context: .
+      args:
+        UID: "1001"
+        GID: "1001"
+        UNAME: "cybuser"
     container_name: castestor
     env_file:
       - .env
@@ -13,5 +18,7 @@ services:
     logging:
       options:
         max-size: "10m"
-        max-file: "3" 
+        max-file: "3"
+    user: "1001:1001"
     # restart: always
+
