--- a/compose.yml
+++ b/compose.yml
@@ -10,7 +10,7 @@ services:
     env_file:
       - .env
     ports:
-      - "8000:8000"
+      - "${APP_PORT}:8000"
     environment:
       BIND_ADDRESS: "0.0.0.0"
 
